# http_project

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
lib/: CMakeLists.txt
lib/include/my_http_lib/: client.h  connection.h  http_lib.h  method.h  request.h  response.h  server.h
lib/src/: client.cpp  connection.cpp  http_lib.cpp  method.cpp  request.cpp  response.cpp  server.cpp
server/: CMakeLists.txt
server/src/: main.cpp
